// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`VerifyEmailPage rendering tests email defined - test 1`] = `
<div>
  <div
    class="flex min-h-screen w-full items-center justify-center bg-linear-to-br from-background via-background to-primary/5 p-4"
    data-testid="verify-email-page"
  >
    <div
      class="w-full max-w-md"
    >
      <div
        class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl py-6 border-2 shadow-xl"
        data-slot="card"
      >
        <div
          class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 space-y-6 pb-6"
          data-slot="card-header"
        >
          <a
            class="flex flex-col items-center gap-3"
            data-testid="mock-link"
            href="/"
          >
            <h1
              class="text-2xl font-bold"
            >
              Vision Notes
            </h1>
          </a>
          <div
            class="space-y-2"
          >
            <div
              class="text-center text-3xl font-bold tracking-tight"
              data-slot="card-title"
              data-testid="title"
            >
              E-Mail bestätigen
            </div>
            <div
              class="text-muted-foreground text-center text-base"
              data-slot="card-description"
              data-testid="description"
            >
              Wir haben dir eine E-Mail mit einem Bestätigungslink geschickt
            </div>
          </div>
        </div>
        <div
          class="px-6 pb-8"
          data-slot="card-content"
        >
          <div
            class="space-y-6 text-center"
            data-testid="verify-email-form"
          >
            <div
              class="flex justify-center"
            >
              <div
                class="rounded-full bg-primary/10 p-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-mail h-10 w-10 text-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
                  />
                  <rect
                    height="16"
                    rx="2"
                    width="20"
                    x="2"
                    y="4"
                  />
                </svg>
              </div>
            </div>
            <p
              class="text-sm text-muted-foreground"
            >
              Wir haben eine Bestätigungs-E-Mail an
               
              <span
                class="font-medium text-foreground"
                data-testid="email-display"
              >
                user@test.com
              </span>
               
              gesendet. Klicke auf den Link in der E-Mail, um dein Konto zu aktivieren.
            </p>
            <p
              class="text-xs text-muted-foreground"
            >
              Keine E-Mail erhalten? Prüfe deinen Spam-Ordner oder fordere eine neue E-Mail an.
            </p>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full cursor-pointer"
              data-slot="button"
              data-testid="resend-btn"
            >
              Erneut senden
            </button>
            <a
              class="font-medium text-primary underline-offset-4 transition-colors hover:text-primary/80 hover:underline"
              data-testid="sign-in-link"
              href="/auth/sign-in"
              target="_self"
            >
              Anmelden
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VerifyEmailPage rendering tests email undefined - test 1`] = `
<div>
  <div
    class="flex min-h-screen w-full items-center justify-center bg-linear-to-br from-background via-background to-primary/5 p-4"
    data-testid="verify-email-page"
  >
    <div
      class="w-full max-w-md"
    >
      <div
        class="bg-card text-card-foreground flex flex-col gap-6 rounded-xl py-6 border-2 shadow-xl"
        data-slot="card"
      >
        <div
          class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 px-6 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 space-y-6 pb-6"
          data-slot="card-header"
        >
          <a
            class="flex flex-col items-center gap-3"
            data-testid="mock-link"
            href="/"
          >
            <h1
              class="text-2xl font-bold"
            >
              Vision Notes
            </h1>
          </a>
          <div
            class="space-y-2"
          >
            <div
              class="text-center text-3xl font-bold tracking-tight"
              data-slot="card-title"
              data-testid="title"
            >
              E-Mail bestätigen
            </div>
            <div
              class="text-muted-foreground text-center text-base"
              data-slot="card-description"
              data-testid="description"
            >
              Wir haben dir eine E-Mail mit einem Bestätigungslink geschickt
            </div>
          </div>
        </div>
        <div
          class="px-6 pb-8"
          data-slot="card-content"
        >
          <div
            class="space-y-6 text-center"
            data-testid="verify-email-form"
          >
            <div
              class="flex justify-center"
            >
              <div
                class="rounded-full bg-primary/10 p-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-mail h-10 w-10 text-primary"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m22 7-8.991 5.727a2 2 0 0 1-2.009 0L2 7"
                  />
                  <rect
                    height="16"
                    rx="2"
                    width="20"
                    x="2"
                    y="4"
                  />
                </svg>
              </div>
            </div>
            <p
              class="text-sm text-muted-foreground"
            >
              Bitte überprüfe dein Postfach und klicke auf den Bestätigungslink.
            </p>
            <p
              class="text-xs text-muted-foreground"
            >
              Keine E-Mail erhalten? Prüfe deinen Spam-Ordner oder fordere eine neue E-Mail an.
            </p>
            <a
              class="font-medium text-primary underline-offset-4 transition-colors hover:text-primary/80 hover:underline"
              data-testid="sign-in-link"
              href="/auth/sign-in"
              target="_self"
            >
              Anmelden
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
